# docs/swagger.json
@@ -19,8 +19,95 @@
         "version": "1.0"
     },
     "host": "localhost:8080",
-    "basePath": "/",
+    "basePath": "/api/v1",
     "paths": {
+        "/files": {
+            "post": {
+                "description": "Create file metadata info like uuid",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Files"
+                ],
+                "summary": "Create file metadata info",
+                "parameters": [
+                    {
+                        "description": "add file info, id return",
+                        "name": "file",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.FileMeta"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/models.FileMeta"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
+        "/files/{id}": {
+            "put": {
+                "description": "Upload file to remote storage",
+                "consumes": [
+                    "application/octet-stream"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Files"
+                ],
+                "summary": "Upload file to storage",
+                "parameters": [
+                    {
+                        "description": "attach file in application/octet-stream body",
+                        "name": "file",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "file id, type uuid",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.FileInfo"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
         "/route": {
             "get": {
                 "description": "Get all routes without marks and route line",
@@ -229,6 +316,40 @@
                 }
             }
         },
+        "models.FileInfo": {
+            "type": "object",
+            "properties": {
+                "link": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.FileMeta": {
+            "type": "object",
+            "required": [
+                "filename",
+                "owner",
+                "owner_id"
+            ],
+            "properties": {
+                "filename": {
+                    "type": "string",
+                    "example": "kek.txt"
+                },
+                "id": {
+                    "type": "string",
+                    "example": "9b7b28f3-966e-4fbe-b0a2-a7c5f9a90f0f.jbg"
+                },
+                "owner": {
+                    "type": "string",
+                    "example": "route"
+                },
+                "owner_id": {
+                    "type": "integer",
+                    "example": 2
+                }
+            }
+        },
         "models.Mark": {
             "type": "object",
             "required": [
@@ -328,6 +449,9 @@
                 "name": {
                     "type": "string",
                     "example": "Lexa"
+                },
+                "rate": {
+                    "type": "integer"
                 },
                 "region": {
                     "type": "string",
